Update profile link in footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <footer>
-      By <a href="https://github.com/sheilaJava" target="_blank">Sheila</a> ♥ Icons
+      By <a href="https://github.com/sheilajava" target="_blank">Sheila</a> ♥ Icons
       by
       <a href="https://icones8.fr/" target="_blank">Icons8</a>
     </footer>
